--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "grunt": "0.4.x",
     "underscore.deferred": "~0.1.4",
-    "knox": "0.6.x",
+    "knox": "git://github.com/iamdustan/knox",
     "mime": "~1.2.5"
   },
   "devDependencies": {
